# dployr-sdk

./: README.md  openapi.yaml  package.json  pnpm-lock.yaml
docs/: index.md  (+3 more)
python/: README.md  pyproject.toml  requirements.txt
python/client/: dployr_client.py  kiota-lock.json
python/client/auth/: auth_request_builder.py
python/client/deployments/: deployments_get_response.py  deployments_request_builder.py
python/client/logs/: logs_request_builder.py
python/client/models/: blueprint.py  blueprint_env_vars.py  blueprint_source.py  deploy_request.py  deploy_request_env_vars.py  deploy_request_secrets.py  deploy_request_source.py  deploy_response.py  deployment.py  deployment_status.py  error.py  error_details.py  install_request.py  login_response.py  proxy_route.py  proxy_status.py  register_instance_request.py  remote_obj.py  request_domain_request.py  request_domain_response.py  role.py  runtime.py  runtime_obj.py  service.py  service_env_vars.py  service_update.py  service_update_env_vars.py  system_doctor_result.py  system_info.py  system_info_build.py  system_info_config.py  system_info_hardware.py  system_info_storage.py  system_info_storage_devices.py  system_info_storage_partitions.py  system_status.py  system_status_proxy.py  system_status_services.py  system_status_status.py  token_claims.py  (+4 more)
python/client/proxy/: proxy_request_builder.py
python/client/services/: services_get_response.py  services_request_builder.py
python/client/system/: system_request_builder.py
python/client/users/: users_get_response.py  users_request_builder.py
(+64 files in other folders)
